<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/study"
        android:title="@string/study" />
    <item
        android:id="@+id/placments"
        android:title="@string/placements"/>
    <item
        android:id="@+id/roadmaps"
        android:title="@string/roadmaps"/>

    <item
        android:id="@+id/language"
        android:title="@string/programming_language"/>
    <item
        android:id="@+id/skills"
        android:title="@string/skills"/>

    <item
        android:id="@+id/interview"
        android:title="@string/interview_questions"/>

    <item
        android:id="@+id/about"
        android:title="@string/about_us">
    </item>

    <item
        android:id="@+id/logOut"
        android:title="@string/log_out"/>
    </group>
</menu>